@@ -13,10 +13,10 @@ pa_oop.cmo: ../camlp4/pcaml.cmi ../camlp4/mLast.cmi
 pa_oop.cmx: ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pa_op.cmo: ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
 pa_op.cmx: ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
-pa_ru.cmo: ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
-pa_ru.cmx: ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 parserify.cmo: ../camlp4/mLast.cmi parserify.cmi 
 parserify.cmx: ../camlp4/mLast.cmi parserify.cmi 
+pa_ru.cmo: ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
+pa_ru.cmx: ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pr_depend.cmo: ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
 pr_depend.cmx: ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pr_extend.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
@@ -27,19 +27,19 @@ pr_null.cmo: ../camlp4/pcaml.cmi
 pr_null.cmx: ../camlp4/pcaml.cmx 
 pr_o.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
 pr_o.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
-pr_op.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
-pr_op.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pr_op_main.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi parserify.cmi \
     ../camlp4/mLast.cmi 
 pr_op_main.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx parserify.cmx \
     ../camlp4/mLast.cmi 
+pr_op.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
+pr_op.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pr_r.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
 pr_r.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
-pr_rp.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
-pr_rp.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 pr_rp_main.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi parserify.cmi \
     ../camlp4/mLast.cmi 
 pr_rp_main.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx parserify.cmx \
     ../camlp4/mLast.cmi 
+pr_rp.cmo: ../camlp4/spretty.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
+pr_rp.cmx: ../camlp4/spretty.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
 q_phony.cmo: ../camlp4/quotation.cmi ../camlp4/pcaml.cmi ../camlp4/mLast.cmi 
 q_phony.cmx: ../camlp4/quotation.cmx ../camlp4/pcaml.cmx ../camlp4/mLast.cmi 
